--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 javac.debug=true
-user.properties.file=C:\\Users\\ALIENWARE\\AppData\\Roaming\\NetBeans\\21\\build.properties
+user.properties.file=/Users/sharon/Library/Application Support/NetBeans/17/build.properties
