--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,7 +6,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;output=bin;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1714318941013
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1714645251000
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.workspace=..
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -81,7 +81,7 @@ main.class=booknote_keeper.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=default_platform
+platform.active=JDK_17
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
