--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,8 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
 javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=/Users/sharon/Library/Application Support/NetBeans/17/build.properties
