--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,12 +1,13 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Booknote_Keeper
+application.vendor=sharon
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;output=bin;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1714645251000
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1714654490928
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.workspace=..
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -36,6 +37,7 @@ dist.jar=${dist.dir}/Booknote_Keeper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Booknote_Keeper
+endorsed.classpath=
 excludes=
 file.reference.Booknote_Keeper-src=src
 includes=**
@@ -50,8 +52,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=11
+javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -81,7 +83,7 @@ main.class=booknote_keeper.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=JDK_17
+platform.active=JDK_11
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
