--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/Users/sharon/Library/Application Support/NetBeans/17/build.properties
+user.properties.file=C:\\Users\\lealu\\AppData\\Roaming\\NetBeans\\21\\build.properties
