--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -83,7 +83,7 @@ main.class=booknote_keeper.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=JDK_11
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
